Mas o menito ya

--- a/index.html
+++ b/index.html
@@ -1,10 +1,114 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hola mundo.</title>
-    </head>
-    <body>
-        <h1>Hola mundo</h1>
-        <p>Hoy es un dia bastante lluvioso alv</p>
-    </body>
+  <head>
+    <title>Mi portafolio personal</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <a href="#acerca-de-mi">Acerca de mí</a>
+          <a href="#habilidades">Habilidades</a>
+          <a href="#experiencia">Experiencia</a>
+          <a href="#proyectos">Proyectos</a>
+          <a href="#contacto">Contacto</a>
+        </ul>
+      </nav>
+      <h1>Jose Maria Gonzalez Mazzini</h1>
+      <h2>Programador</h2>
+    </header>
+    <main>
+      <section id="acerca-de-mi">
+        <h2>Acerca de mí</h2>
+        <p>
+          Como desarrollador web junior, fusiono mi pasión por el diseño y la
+          programación para crear experiencias web excepcionales. Me esfuerzo
+          por cada línea de código y cada detalle de diseño para asegurarme de
+          que mis sitios web sean visualmente atractivos, funcionales y
+          accesibles para todos. Estoy comprometido a seguir aprendiendo y
+          mejorando continuamente mientras busco oportunidades desafiantes que
+          amplíen mi experiencia en el desarrollo web.
+        </p>
+      </section>
+      <section id="habilidades">
+        <h2>Habilidades</h2>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Git</li>
+          <li>Metodologías ágiles</li>
+          <li>C</li>
+        </ul>
+      </section>
+      <section id="experiencia">
+        <h2>Experiencia</h2>
+        <ul>
+          <li>
+            <b>testa</b> (1945-presente)
+            <ul>
+              <li>Desarrollador web junior</li>
+              <li>
+                Responsable del desarrollo y mantenimiento de la página web de
+                la empresa
+              </li>
+            </ul>
+          </li>
+          <li>
+            <strong>software</strong> (2005-2023)
+            <ul>
+              <li>Diseñador web</li>
+              <li>
+                Responsable del diseño y maquetación de la página web de la
+                empresa
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section id="proyectos">
+        <h2>Proyectos</h2>
+        <ul>
+          <li>
+            <a href="https://www.nytimes.com/games/wordle/index.html"
+              >Clon de Wordle</a
+            >
+            <p>Descripción del mega proyecto</p>
+          </li>
+          <li>
+            <a href="https://www.nytimes.com/games/wordle/index.html"
+              >Proyecto especial</a
+            >
+            <p>El mejor proyecto del mundo</p>
+          </li>
+        </ul>
+      </section>
+      <section id="contacto">
+        <h2>Contacto</h2>
+        <ul>
+          <li>Email: josemazzini0209@Gmail.com</li>
+          <li>Teléfono: 0986-199045</li>
+          <li>
+            Redes Sociales:
+            <ul>
+              <li>
+                <a href="https://www.facebook.com/josemaria.gonzalezmazzini.9?mibextid=ZbWKwL">Facebook</a>
+              </li>
+              <li>
+                <a href="https://x.com/_J0sema">Twitter</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/_j0sema__/?igsh=d2U1NXh5bjl4cTR4">Instagram</a>
+              </li>
+              
+            </ul>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>Copyright &copy; 2024</p>
+    </footer>
+  </body>
 </html>
