--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@
   <head>
     <title>Mi portafolio personal</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css" />
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <a href="#acerca-de-mi">Acerca de mí</a>
-          <a href="#habilidades">Habilidades</a>
-          <a href="#experiencia">Experiencia</a>
-          <a href="#proyectos">Proyectos</a>
-          <a href="#contacto">Contacto</a>
+          <a class="menu-item" href="#acerca-de-mi">Acerca de mí</a>
+          <a class="menu-item" href="#habilidades">Habilidades</a>
+          <a class="menu-item" href="#experiencia">Experiencia</a>
+          <a class="menu-item" href="#proyectos">Proyectos</a>
+          <a class="menu-item" href="#contacto">Contacto</a>
         </ul>
       </nav>
-      <h1>Jose Maria Gonzalez Mazzini</h1>
-      <h2>Programador</h2>
+      <h1>Jose Maria Gonzalez Mazzini <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/3/31/Enchanting_Table.gif/revision/latest?cb=20220222115558" width="30"></h1>
+      <h2>Programador<img src="" width="30" ></h2>
     </header>
     <main>
       <section id="acerca-de-mi">
-        <h2>Acerca de mí</h2>
+        <h2>Acerca de mí <img src="https://media.tenor.com/zPO2FgjF1NQAAAAi/pet-pet-pat-pat.gif" width="36"></h2>
         <p>
           Como desarrollador web junior, fusiono mi pasión por el diseño y la
           programación para crear experiencias web excepcionales. Me esfuerzo
@@ -32,7 +37,7 @@
         </p>
       </section>
       <section id="habilidades">
-        <h2>Habilidades</h2>
+        <h2>Habilidades <img src="https://media.tenor.com/niPyMOHIqPoAAAAi/pixel-pixel-art.gif" width="25"></h2>
         <ul>
           <li>HTML</li>
           <li>CSS</li>
@@ -43,10 +48,10 @@
         </ul>
       </section>
       <section id="experiencia">
-        <h2>Experiencia</h2>
+        <h2>Experiencia<img src="https://media.tenor.com/vS_5DUOytmwAAAAi/chara-undertale.gif" width="28"></h2>
         <ul>
           <li>
-            <b>testa</b> (1945-presente)
+            <b>tesla</b> (1945-presente)
             <ul>
               <li>Desarrollador web junior</li>
               <li>
@@ -68,7 +73,7 @@
         </ul>
       </section>
       <section id="proyectos">
-        <h2>Proyectos</h2>
+        <h2>Proyectos<img src="https://media.tenor.com/DLcytNjRQ7QAAAAi/undertale-yellow-clover-dancing.gif" width="25"></h2>
         <ul>
           <li>
             <a href="https://www.nytimes.com/games/wordle/index.html"
@@ -85,23 +90,26 @@
         </ul>
       </section>
       <section id="contacto">
-        <h2>Contacto</h2>
+        <h2>Contacto <img src="https://media1.tenor.com/m/UlR8cIBR4cAAAAAC/pixel-walking.gif" width="15"></h2>
         <ul>
           <li>Email: josemazzini0209@Gmail.com</li>
           <li>Teléfono: 0986-199045</li>
           <li>
             Redes Sociales:
-            <ul>
+            <ul id="sociales">
               <li>
-                <a href="https://www.facebook.com/josemaria.gonzalezmazzini.9?mibextid=ZbWKwL">Facebook</a>
+                <a href="https://www.facebook.com/josemaria.gonzalezmazzini.9?mibextid=ZbWKwL" class="fa fa-facebook">Facebook
+
+                </a>
+
               </li>
               <li>
-                <a href="https://x.com/_J0sema">Twitter</a>
+                <a href="https://x.com/_J0sema_" class="fa fa-twitter">Twitte</a>
               </li>
               <li>
-                <a href="https://www.instagram.com/_j0sema__/?igsh=d2U1NXh5bjl4cTR4">Instagram</a>
+                <a href="https://www.instagram.com/_j0sema__?igsh=d2U1NXh5bjl4cTR4" class="fa fa-instagram">Instagram</a>
               </li>
-              
+              <!-- Agrega más redes sociales si lo deseas -->
             </ul>
           </li>
         </ul>
@@ -109,6 +117,7 @@
     </main>
     <footer>
       <p>Copyright &copy; 2024</p>
+      
     </footer>
   </body>
 </html>
